# BadgerEngineSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.txt
Sandbox/: ApiWithoutSecrets.cpp  main.cpp
Sandbox/Matrix/: Matrix3D.cpp  Matrix3D.hpp  Matrix4D.cpp  Matrix4D.hpp
Sandbox/MultithreadedModels/: MultithreadedModels.cpp
Sandbox/PhongShading/: PhongShading.cpp  PhongShading.hpp  VulkanglTFModel.hpp
Sandbox/PhongShading/Content/: Shader.frag  Shader.vert  frag.spv  vert.spv
Sandbox/ShadowMapping/: ShadowMapping.cpp  ShadowMapping.hpp
Sandbox/ShadowMapping/Content/: Nyotengu.gltf  NyotenguGround.gltf  Shader.frag  Shader.vert  ShadowShader.vert  ShadowVert.spv  frag.spv  vert.spv
Sandbox/Vector/: Vector3D.cpp  Vector3D.hpp  Vector4D.cpp  Vector4D.hpp
Sandbox/VectorVulkanTest/: VectorVulkanTest.cpp  VectorVulkanTest.hpp
Sandbox/VectorVulkanTest/Content/: Shader.frag  Shader.vert  frag.spv  vert.spv
Sandbox/Window/: IWindow.hpp  WindowFactory.cpp  WindowFactory.hpp  WindowWin32.cpp  WindowWin32.hpp
SelfContainedSamples/: ApiWithoutSecrets.cpp  ApiWithoutSecrets_Part2.cpp  ApiWithoutSecrets_Part3.cpp  ApiWithoutSecrets_Part4.cpp  ApiWithoutSecrets_Part5.cpp  ApiWithoutSecrets_Part6.cpp  RenderBadger.h
SelfContainedSamples/ApiWithoutSecrets_Part3Content/: Shader.frag  Shader.vert
SelfContainedSamples/ApiWithoutSecrets_Part5Content/: Shader.frag
SelfContainedSamples/ApiWithoutSecrets_Part6Content/: Shader.frag  Shader.vert  vert.spv
SelfContainedSamples/UdacityFinalProject/: Instance.cpp  UdacityFinalProject.cpp  UdacityFinalProject.hpp  VulkanDevice.hpp  VulkanUtils.hpp  VulkanglTFModel.hpp  Window.cpp  Window.hpp
SelfContainedSamples/UdacityFinalProject/Content/: JillDance.gltf  JillDance2.gltf  frag.spv  vert.spv
SelfContainedSamples/UdacityFinalProjectContent/: JillHipHop.gltf  SaschaGLTF.frag  SaschaGLTF.vert
